fix: bugs on mobile screen has been resolved

--- a/src/Components/Home/Post/style.css
+++ b/src/Components/Home/Post/style.css
@@ -3,6 +3,7 @@
   max-width: 360px;
   margin-top: 30px;
   height: 100%;
+  flex-shrink: 0;
 }
 
 .post-section__container .img-post {
@@ -14,6 +15,8 @@
   object-fit: cover;
   height: 100%;
   border-radius: 10px;
+  width: 100%;
+  pointer-events: none;
 }
 
 .post-info__section .topside-info__post h1 {
@@ -45,4 +48,15 @@
   font-size: 24px;
   font-weight: 600;
   color: #363B47;
+}
+
+@media screen and (max-width: 800px) {
+  .post-section__container {
+    max-width: 300px;
+    margin-top: 15px;
+  }
+
+  .post-info__section .bottomside-info__post {
+    margin-top: 6px;
+  }
 }
